feat: add post endpoint
